--- a/msa_vis/templates/second_page.html
+++ b/msa_vis/templates/second_page.html
@@ -5,5 +5,6 @@
   <body>
       <h1>Roboczy formularz MSA-vis-project mmmm</h1>
         tu bedzie znajdywac sie obrazek?
+        <a href="/msa_vis/">Powroc do strony wejsciowej</a>
   </body>
 </html> 
