--- a/msa_vis/templates/second_page.html
+++ b/msa_vis/templates/second_page.html
@@ -3,7 +3,11 @@
     <title> MSA VIS </title>
   </head>
   <body>
-      <h1>Roboczy formularz MSA-vis-project mmmm</h1>
-        tu bedzie znajdywac sie obrazek?
+      <h1>Roboczy formularz MSA-vis-project</h1>
+	odbiorca mejla: {{email}}
+	<br>
+	identyfikator wpisanych sekwencji: {{seqID}}
+      <p>Tutaj obrazek..</p>
+      <a href="/msa_vis/">Powroc do strony wejsciowej</a>
   </body>
 </html> 
