--- a/msa_vis/templates/second_page.html
+++ b/msa_vis/templates/second_page.html
@@ -3,10 +3,16 @@
     <title> MSA VIS </title>
   </head>
   <body>
-      <h1>Roboczy formularz MSA-vis-project</h1>
-	odbiorca mejla: {{email}}
-	identyfikator wpisanych sekwencji: {{seqID}}
-      <p>Tutaj obrazek..</p>
+      <h1>formularz MSA-vis-project</h1>
+      <p>  seqID: {{seqID}};  Tutaj obrazek..
+      <img src="/static/uploaded_files/filename.svg" />
+      </p>
+      <p>
+      <a href="/static/uploaded_files/filename.svg">Full screen png</a>
+      </p>
+      <p>
+      <a href="/chart_download/simple.png">Download picture</a>
+      </p>
       <a href="/msa_vis/">Powroc do strony wejsciowej</a>
   </body>
 </html> 
