--- a/msa_vis/templates/third_page.html
+++ b/msa_vis/templates/third_page.html
@@ -1,9 +1,13 @@
 <html>
   <head>
-    <title>MSA-VIS</title>
+    <title>MSA VIS</title>
   </head>
   <body>
-    Niepoprawne dane:
+    Niepoprawne dane w formularzu. 
+    <br>-Mozliwe, ze adres email jest nieprawidlowy,
+    <br>-nie zostala wpisana ani sekwencja ani nie zostal zaladowany plik w formacie .fasta,
+    <br>-MSA w pliku .fasta jest nieprawidlowy.
+    <br>
     <a href="/msa_vis/">Powroc do strony wejsciowej</a>
    </body>
 </html>"
