--- a/msa_vis/templates/second_page.html
+++ b/msa_vis/templates/second_page.html
@@ -3,16 +3,13 @@
     <title> MSA VIS </title>
   </head>
   <body>
-      <h1>formularz MSA-vis-project</h1>
-      <p>  seqID: {{seqID}};  Tutaj obrazek..
-      <img src="/static/uploaded_files/filename.svg" />
+      <h1>MSA vis</h1>
+      <p>  seqID: {{seqID}}; Picture:
+      <img src="/static/uploaded_files/MSAvis.svg" />
       </p>
       <p>
-      <a href="/static/uploaded_files/filename.svg">Full screen png</a>
+      <a href="/static/uploaded_files/MSAvis.svg">Full screen png</a>
       </p>
-      <p>
-      <a href="/chart_download/simple.png">Download picture</a>
-      </p>
-      <a href="/msa_vis/">Powroc do strony wejsciowej</a>
+      <a href="/msa_vis/">New MSA visualization</a>
   </body>
 </html> 
