--- a/msa_vis/templates/third_page.html
+++ b/msa_vis/templates/third_page.html
@@ -3,11 +3,12 @@
     <title>MSA VIS</title>
   </head>
   <body>
-    Niepoprawne dane w formularzu. 
-    <br>-Mozliwe, ze adres email jest nieprawidlowy,
-    <br>-nie zostala wpisana ani sekwencja ani nie zostal zaladowany plik w formacie .fasta,
-    <br>-MSA w pliku .fasta jest nieprawidlowy.
+    Niepoprawne dane w formularzu. Sprawdz czy:
+    <br>-wpisany adres email jest prawidlowy,
+    <br>-jednoczesnie nie zostala wpisana sekwencja i zostal zaladowany plik w formacie .fasta. Mozliwe jest wybranie tylko jednego z nich,
+    <br>-MSA w pliku .fasta jest prawidlowy,
+    <br>-MSA w polu Sequences jest prawidlowy.
     <br>
-    <a href="/msa_vis/">Powroc do strony wejsciowej</a>
+    <a href="/msa_vis/">back</a>
    </body>
-</html>"
+</html>
