--- a/msa_vis/templates/first_page.html
+++ b/msa_vis/templates/first_page.html
@@ -3,7 +3,7 @@
     <title> MSA VIS </title>
   </head>
   <body>
-      <h1>formularz MSA-vis-project</h1>
+      <h1>MSA-vis</h1>
       <form action="/msa_vis/" method="POST" enctype="multipart/form-data" >
        {{ page_form.as_p }}
        <input type="submit" value="Submit!" />
