--- a/msa_vis/templates/second_page.html
+++ b/msa_vis/templates/second_page.html
@@ -8,7 +8,7 @@
       <img src="/static/uploaded_files/MSAvis.svg" />
       </p>
       <p>
-      <a href="/static/uploaded_files/MSAvis.svg">Full screen png</a>
+      <a href="/static/uploaded_files/MSAvis.svg">Full screen svg</a>
       </p>
       <a href="/msa_vis/">New MSA visualization</a>
   </body>
