Small changes and add django debugger

--- a/django/msa_vis/templates/first_page.html
+++ b/django/msa_vis/templates/first_page.html
@@ -10,12 +10,6 @@ H1 {
  font: bold italic 150% sans-serif;
  color: black;
 }
-H3 {
- text-align: left
- font-family:Verdana,Geneva,Arial,Helvetica,sans-serif;
- font-size: 12px;
- color: blue;
-}
 ul.errorlist {
   margin: 5px;
   padding: 10px;
@@ -34,10 +28,10 @@ ul.errorlist {
 
  <html>
   <head>
-    <title> MsaVis </title>
+    <title> Msavis </title>
   </head>
   <body>
-      <h1>MsaVis</h1>
+      <h1>Msavis</h1>
 
 
 
