--- a/django/msa_vis/templates/second_page.html
+++ b/django/msa_vis/templates/second_page.html
@@ -4,9 +4,11 @@
   </head>
   <body>
       <h1>MSA vis </h1>
-      <p>jobID: {{jobID}} </p>
-      <p> Picture:
-      <img src="/static/uploaded_files/MSAvis{{jobID}}.svg" />
+      <p>
+      <pre>JobID: {{jobID}}       Date: {{datetime}} </pre>
+      </p>
+      <p> Result:
+      <img src="/static/uploaded_files/MSAvis{{jobID}}.svg" alt="MSAvis{{jobID}}.svg" />
       </p>
       <p>
       <a href="/static/uploaded_files/MSAvis{{jobID}}.svg">Full screen svg</a>
