--- a/django/msa_vis/templates/between_page.html
+++ b/django/msa_vis/templates/between_page.html
@@ -1,12 +1,15 @@
-<html>
+ <html>
   <head>
+    <meta http-equiv="refresh" content="15" />
     <title> MSAvis </title>
   </head>
   <body>
       <a href="http://www.ibb.waw.pl"><img src="http://www.ibb.waw.pl/themes/ibb/logo.png" border=0></a>
       <h1>MSA visualization </h1>
       <p>
-      <pre>Please wating... </pre>
+      <pre>Please wait... </pre>
+      <pre>Your job ID is {{jobID}} (from {{date}}). You can find it later by visiting the page you are seeing now.</pre>
+      <br>
       </p>
   </body>
 </html>
