--- a/django/msa_vis/templates/second_page.html
+++ b/django/msa_vis/templates/second_page.html
@@ -10,12 +10,12 @@
       <font color="#DCDCDC"><b>Result</b></font>
       </table>
       <p>
-      <pre>JobID: {{jobID}}       Date: {{datetime}} </pre>
+      <pre>JobID: {{jobID}}       Date: {{date}} CEST</pre>
       </p>
       <p> Result:
       </p>
       <p>
-      <a href="/static/uploaded_files/MSAvis{{jobID}}.svg"><img src="/static/uploaded_files/MSAvis{{jobID}}.svg" alt="MSAvis{{jobID}}.svg" width=1000 high=200 />
+      <a href="/static/uploaded_files/finalMSAvis{{jobID}}.svg"><img src="/static/uploaded_files/finalMSAvis{{jobID}}.svg" alt="finalMSAvis{{jobID}}.svg" width=1000 high=200 />
       </p>
       <p>
       <table cellpadding="1" cellspacing="1">
@@ -23,7 +23,7 @@
       <font color="#DCDCDC"><b>Options</b></font>
       </table>
       </p>
-      <p><a href="/static/uploaded_files/MSAvis{{jobID}}.svg" target=_blank>Full screen svg</a></p>
+      <p><a href="/static/uploaded_files/finalMSAvis{{jobID}}.svg" target=_blank>Full screen svg</a></p>
       <form><input type="button" value="New MSA visualization" onClick="window.location.href='/msa_vis'"></form>
 
       <script type="text/javascript">
